@@ -103,6 +103,7 @@ add_clazy_test(qstring-allocations)
 add_clazy_test(returning-void-expression)
 add_clazy_test(rule-of-three)
 add_clazy_test(static-pmf)
+add_clazy_test(used-qunused-variable)
 add_clazy_test(virtual-call-ctor)
 add_clazy_test(clazy-standalone)
 add_clazy_test(clazy)
