@@ -175,3 +175,5 @@
 
 * v0.0.1 (June 10th, 2015)
   - (...)
+
+  - <dont forget changelog entry for used-qunused-variable>
